--- a/shared/database-models/pom.xml
+++ b/shared/database-models/pom.xml
@@ -9,6 +9,7 @@
         <groupId>com.lms</groupId>
         <artifactId>lms-parent</artifactId>
         <version>1.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>database-models</artifactId>
@@ -32,5 +33,6 @@
         </dependency>
     </dependencies>
 </project>
+
 
 
