LMS-7: Setup base spring boot app with configured maven parent/child dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>shared/common-lib</module>
         <module>shared/database-models</module>
         <!-- Сервисы будут добавлены здесь по мере создания -->
+        <module>services/courseService</module>
     </modules>
 
     <dependencyManagement>
