[LMS-6][LMS-7][LMS-8]: Implement Course Service with basic commands, MongoDB integration and REST API. Integrated SwaggerUI to endpoints. Added a dev profile to service.

--- a/services/courseService/src/main/resources/application.properties
+++ b/services/courseService/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=courseService
+server.port=8080
+
+# default DB if no profile is active
+spring.data.mongodb.uri=mongodb://localhost:27017/lms
