--- a/services/courseService/src/main/resources/application-dev.properties
+++ b/services/courseService/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 # MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/lms_dev
+spring.data.mongodb.uri=mongodb://admin:admin_password@localhost:27017/lms_mongo_db?authSource=admin
 
 logging.level.org.springframework.web=DEBUG
 logging.level.com.lms=DEBUG
