--- a/services/courseService/src/main/resources/application-dev.properties
+++ b/services/courseService/src/main/resources/application-dev.properties
@@ -8,6 +8,6 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.lms=DEBUG
 
 # Swagger
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v1/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.url=/openapi.yaml
