--- a/services/userService/src/main/resources/application.properties
+++ b/services/userService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=userService
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/lms_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/lms_db
 spring.datasource.username=lms_user
 spring.datasource.password=lms_password
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework.boot.autoconfigure.orm.jpa=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
