Added a security config to courseService

--- a/services/courseService/build.gradle
+++ b/services/courseService/build.gradle
@@ -20,4 +20,5 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
     testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
