--- a/services/authservice/src/main/resources/application-dev.properties
+++ b/services/authservice/src/main/resources/application-dev.properties
@@ -29,7 +29,7 @@ auth.tokens.secret=mysuperlongsecretkey_for_dev_1234567890
 
 
 # ????????????!!!!!
-auth.userservice.base-url=http://localhost:8082
+auth.userservice.base-url=http://localhost:8082/api/v1/users/
 
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.web=INFO
