--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'lms'
-include 'services:courseService', 'services:userService'
+include 'services:courseService', 'services:userService', 'services:groupService', 'services:authservice'
 include 'services:shared'
