updated gradle configuration, now all services linked and depends on main repo

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,8 @@
 rootProject.name = 'lms'
-include 'services:courseService', 'services:userService'
-include 'services:shared'
+
+include 'services:courseService'
+include 'services:authservice'
+include 'services:userservice'
+
+include 'shared'
+project(':shared').projectDir = file('shared')
