--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,12 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7' apply false
 }
 
-group = 'com.lms'
-version = '1.0-SNAPSHOT'
-
-subprojects {
-    group = rootProject.group
-    version = rootProject.version
-
+configure(subprojects) { project ->
     apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
 
-    repositories {
-        mavenCentral()
-    }
+    group = 'ru.lms-project'
+    version = '0.0.1-SNAPSHOT'
 
     java {
         toolchain {
@@ -23,13 +17,23 @@ subprojects {
         }
     }
 
-    dependencies {
-        testImplementation platform('org.junit:junit-bom:5.10.0')
-        testImplementation 'org.junit.jupiter:junit-jupiter'
-        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    repositories {
+        mavenCentral()
     }
 
-    test {
+    if (project.name != 'services' && project.name != 'shared') {
+        apply plugin: 'org.springframework.boot'
+    }
+
+    dependencies {
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+        testCompileOnly 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+
+    tasks.withType(Test) {
         useJUnitPlatform()
     }
 }
