--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+.gradle/
+build/
 # IDE
 .idea/
 .vscode/
