--- a/services/api-gateway/src/main/resources/application.yaml
+++ b/services/api-gateway/src/main/resources/application.yaml
@@ -1,3 +1,27 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: api-gateway
+  cloud:
+    gateway:
+      server:
+        webflux:
+          routes:
+            - id: userservice
+              uri: http://localhost:8082
+              predicates:
+                - Path=/api/v1/users/**
+
+            - id: authservice
+              uri: http://localhost:8084
+              predicates:
+                - Path=/api/v1/auth/**
+
+            - id: courseservice
+              uri: http://localhost:8083
+              predicates:
+                - Path=/api/v1/courses/**
+
+
