--- a/services/api-gateway/build.gradle
+++ b/services/api-gateway/build.gradle
@@ -25,9 +25,14 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation(project(':services:common-security')) {
+		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
+	}
 }
 
 dependencyManagement {
