--- a/services/api-gateway/src/main/resources/application.yaml
+++ b/services/api-gateway/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
               uri: http://localhost:8082
               predicates:
                 - Path=/api/v1/users/**
+              filters:
+                - Auth
 
             - id: authservice
               uri: http://localhost:8084
@@ -23,5 +25,28 @@ spring:
               uri: http://localhost:8083
               predicates:
                 - Path=/api/v1/courses/**
+              filters:
+                - ConditionalAuth
+          globalcors:
+            cors-configurations:
+              '[/**]':
+                allowed-origins: "http://localhost:3000"
+                allowed-methods:
+                  - GET
+                  - POST
+                  - PUT
+                  - DELETE
+                  - OPTIONS
+                allowed-headers: "*"
+                allow-credentials: true
+                max-age: 3600
+auth:
+  tokens:
+    secret: mysuperlongsecretkey_for_dev_1234567890
+    issuer: http://localhost:8084
+    audience: lms-api
 
-
+logging:
+  level:
+    org.springframework.cloud.gateway: TRACE
+    reactor.netty.http.client: DEBUG
