--- a/services/authservice/src/main/resources/application.properties
+++ b/services/authservice/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=authservice
 spring.profiles.active=dev
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+logging.level.org.springframework.security=DEBUG
