LMS-47: added actuator

--- a/services/api-gateway/src/main/resources/application.yaml
+++ b/services/api-gateway/src/main/resources/application.yaml
@@ -50,3 +50,12 @@ logging:
   level:
     org.springframework.cloud.gateway: TRACE
     reactor.netty.http.client: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,gateway
+  endpoint:
+    health:
+      show-details: always
