--- a/services/common-security/build.gradle
+++ b/services/common-security/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    // AspectJ for @RequireAdmin annotation
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
     // jjwt
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
