--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,8 @@ include 'services:courseService'
 include 'services:authservice'
 include 'services:userservice'
 include 'services:common-security'
+include 'services:groupservice'
+include 'services:course-structure-service'
 
 include 'shared'
 project(':shared').projectDir = file('shared')
