LMS-58: added swagger documentation + controller refactor

--- a/services/notificationservice/src/main/resources/application-dev.yaml
+++ b/services/notificationservice/src/main/resources/application-dev.yaml
@@ -19,3 +19,8 @@ logging:
   level:
     ru.lms_project.notificationservice: DEBUG
     org.springframework.data.mongodb: DEBUG
+
+springdoc:
+  swagger-ui:
+    url: /openapi.yaml
+
