LMS-47: added notificationservice redirect

--- a/services/api-gateway/src/main/resources/application.yaml
+++ b/services/api-gateway/src/main/resources/application.yaml
@@ -42,6 +42,13 @@ spring:
               filters:
                 - ConditionalAuth
 
+            - id: notificationservice
+              uri: http://localhost:8089
+              predicates:
+                - Path=/api/v1/notifications
+              filters:
+                - Auth
+
           globalcors:
             cors-configurations:
               '[/**]':
