--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,127 +1,75 @@
-name: "🚀 LMS Requirements Check"
+name: Backend CI (Gradle Matrix)
 
 on:
   push:
-    branches: [ main, develop ]     # run on every commit to main/develop
+    branches: [ main ]
   pull_request:
-    branches: [ main ]              # and on PRs targeting main
-
-# Cancel older runs for the same branch/PR if a new commit arrives
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
+    branches: [ main ]
 
 jobs:
-  requirements-check:
-    name: "✅ All Requirements Verification"
+  build-services:
+    name: Build ${{ matrix.service }}
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_PASSWORD: lms_password
-          POSTGRES_USER: lms_user
-          POSTGRES_DB: lmsdb
-        options: >-
-          --health-cmd "pg_isready -U lms_user -d lmsdb"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
-      mongodb:
-        image: mongo:7.0
-        env:
-          MONGO_INITDB_ROOT_USERNAME: lms_user
-          MONGO_INITDB_ROOT_PASSWORD: lms_password
-        options: >-
-          --health-cmd "mongosh --quiet --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 27017:27017
+    
+    # Стратегия "Матрица": запустить это задание параллельно для каждого элемента в списке
+    strategy:
+      matrix:
+        service:
+          # Сначала собираем общие модули, если они есть
+          - common-security
+          # Затем все остальные сервисы
+          - authService
+          - courseService
+          - userService
+          - enrollmentService
+          - notificationService
+      # Если сборка одного сервиса упадет, остальные продолжат выполняться
+      fail-fast: false
 
     steps:
-      - name: 📥 Checkout
+      # Шаг 1: Клонирование кода из репозитория
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: ☕ Set up JDK 21 (Temurin) + Maven cache
+      
+      # Шаг 2: Установка Java (JDK) версии 21
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-          cache: 'maven'              # built-in Maven cache
+          # Включаем кеширование зависимостей Gradle. 
+          # Это сильно ускорит последующие сборки, т.к. библиотеки не будут скачиваться заново.
+          cache: 'gradle'
+      
+      # Шаг 3: Предоставление прав на выполнение для Gradle Wrapper
+      # Обязательный шаг, без него скрипт gradlew не запустится
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+      
+      # Шаг 4: Сборка и тестирование конкретного сервиса из матрицы
+      # Используем привычную тебе команду clean build
+      - name: Build and test ${{ matrix.service }}
+        run: ./gradlew :${{ matrix.service }}:clean :${{ matrix.service }}:build
 
-      # ✅ REQUIREMENTS 1–4: Tool versions
-      - name: 🔍 Check Tool Versions
-        run: |
-          echo "✅ REQUIREMENT 1: Java version"
-          java -version
-          echo ""
-          echo "✅ REQUIREMENT 2: Maven version"
-          mvn -version -U -ntp
-          echo ""
-          echo "✅ REQUIREMENT 3: PostgreSQL version"
-          sudo apt-get update -qq
-          sudo apt-get install -y postgresql-client
-          PGPASSWORD=lms_password psql -h localhost -U lms_user -d lmsdb -c "SELECT version();"
-          echo ""
-          echo "✅ REQUIREMENT 4: MongoDB version"
-          curl -fsSL https://www.mongodb.org/static/pgp/server-7.0.asc | sudo gpg -o /usr/share/keyrings/mongodb-server-7.0.gpg --dearmor
-          echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-7.0.gpg ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list
-          sudo apt-get update -qq
-          sudo apt-get install -y mongodb-mongosh
-          mongosh --host localhost:27017 --username lms_user --password lms_password --authenticationDatabase admin --eval "print('MongoDB version: ' + db.version())"
-
-      # ✅ REQUIREMENT 5: Code style (non-blocking)
-      - name: 🎨 Code Style Check (Checkstyle)
-        run: mvn -B -U -ntp checkstyle:check
-        continue-on-error: true
-
-        # ✅ REQUIREMENT 6: Static analysis (non-blocking)
-        # If you don't have PMD configured in pom.xml yet, this will be skipped/fail harmlessly.
-      - name: 🐛 Bug Detection (PMD)
-        run: mvn -B -U -ntp compile pmd:check
-        continue-on-error: true
-
-      # ✅ REQUIREMENT 7: Run unit tests on each commit/PR
-      - name: 🧪 Run Tests
-        run: mvn -B -U -ntp clean test
-
-      # Upload test reports even if tests fail (helps debugging in PRs)
-      - name: ⬆️ Upload Test Reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-reports
-          path: |
-            **/target/surefire-reports/**
-            **/target/failsafe-reports/**
-
-      # ✅ REQUIREMENT 8: Build JAR (skip tests here because they ran already)
-      - name: 📦 Build JAR
-        run: |
-          mvn -B -U -ntp package -DskipTests
-          echo "📦 Built JAR files (top 10):"
-          find . -name "*.jar" -type f | head -10
-
-      - name: ✅ Final Summary
-        if: always()
-        run: |
-          echo "🎯 =========================================="
-          echo "🎯       PIPELINE COMPLETED"
-          echo "🎯 =========================================="
-          echo "✅ Java 21 - checked"
-          echo "✅ Maven - checked"
-          echo "✅ PostgreSQL 15 - service up"
-          echo "✅ MongoDB 7.0 - service up"
-          echo "✅ Checkstyle - executed (non-blocking)"
-          echo "✅ PMD - executed (non-blocking)"
-          echo "✅ Tests - executed"
-          echo "✅ JAR - built"
+  # Итоговое задание, которое подводит итог
+  build-summary:
+    name: Build Summary
+    # Это задание будет ждать завершения всех сборок из матрицы `build-services`
+    needs: build-services
+    runs-on: ubuntu-latest
+    # `if: always()` означает, что этот шаг выполнится всегда,
+    # даже если какие-то из предыдущих сборок упали.
+    if: always()
+    
+    steps:
+      # Шаг, который проверяет, все ли сборки в матрице были успешными
+      - name: Check build status
+        # `needs.build-services.result` содержит итоговый статус всего задания `build-services`
+        if: ${{ needs.build-services.result == 'success' }}
+        run: echo "✅ Все сервисы успешно собраны и протестированы!"
+      
+      # Этот шаг выполнится, только если хотя бы одна сборка в матрице провалилась
+      - name: Report failure
+        if: ${{ needs.build-services.result != 'success' }}
+        # `exit 1` завершает шаг с ошибкой, чтобы весь итоговый пайплайн тоже стал "красным"
+        run: echo "❌ Ошибка: не удалось собрать один или несколько сервисов." && exit 1
