LMS-48: removed useless services + changed names of services

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,10 @@ jobs:
     strategy:
       matrix:
         service:
-          - common-security
-          - authService
-          - courseService
-          - userService
-          - enrollmentService
-          - notificationService
+          - ':services:common-security'
+          - 'services:authservice'
+          - 'services:courseService'
+          - 'services:userservice'
       fail-fast: false
 
     steps:
