--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         service:
-          - ':services:common-security'
+          - 'services:common-security'
           - 'services:authservice'
           - 'services:courseService'
           - 'services:userservice'
