LMS-48: written true name of courseService

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         service:
           - 'services:common-security'
           - 'services:authservice'
-          - 'services:course-service'
+          - 'services:courseService'
           - 'services:userservice'
       fail-fast: false
 
