--- a/services/course-structure-service/src/main/resources/application-dev.properties
+++ b/services/course-structure-service/src/main/resources/application-dev.properties
@@ -2,15 +2,22 @@
 spring.application.name=course-structure-service
 server.port=8087
 
-# MongoDB configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/lms_course_structure_dev
+# ????????: ????????? ??????? ?????? MongoDB ??? ??????????????
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=lms_mongo_db
+spring.data.mongodb.username=lms_app_user
+spring.data.mongodb.password=lms_app_password
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.auto-index-creation=true
 
-# JWT configuration
-jwt.secret=dev-secret-key-for-development-only
-jwt.expiration=86400000
+# JWT configuration (from common-security module)
+auth.tokens.issuer=http://localhost:8087
+auth.tokens.access.ttl=15m
+auth.tokens.refresh.ttl=14d
+auth.tokens.audience=lms-api
+auth.tokens.secret=mysuperlongsecretkey_for_dev_1234567890
 
 # Logging
 logging.level.ru.lms_project.coursestructure=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
-
