--- a/services/course-structure-service/src/main/resources/application-test.properties
+++ b/services/course-structure-service/src/main/resources/application-test.properties
@@ -4,32 +4,15 @@ server.port=0
 
 # MongoDB Embedded for testing
 spring.mongodb.embedded.version=6.0.3
+spring.data.mongodb.database=test_db
 
 # JWT configuration
-jwt.secret=test-secret-key
-jwt.expiration=86400000
-
-# Logging
-logging.level.ru.lms_project.coursestructure=DEBUG
-spring.application.name=course-structure-service
-server.port=8087
-
-# MongoDB configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/lms_course_structure
-spring.data.mongodb.auto-index-creation=true
-
-# JWT configuration
-jwt.secret=your-secret-key-change-this-in-production-make-it-long-and-secure
-jwt.expiration=86400000
+auth.tokens.issuer=http://localhost:8087
+auth.tokens.access.ttl=15m
+auth.tokens.refresh.ttl=14d
+auth.tokens.audience=lms-api
+auth.tokens.secret=test-secret-key-for-testing-purposes-only
 
 # Logging
 logging.level.ru.lms_project.coursestructure=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
-
-# Actuator
-management.endpoints.web.exposure.include=health,info,metrics
-
-# OpenAPI
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-
