--- a/services/course-structure-service/src/main/resources/application.properties
+++ b/services/course-structure-service/src/main/resources/application.properties
@@ -1,20 +1,2 @@
-spring.application.name=course-structure-service
-server.port=8087
-
-# MongoDB configuration
-spring.data.mongodb.uri=mongodb://admin:admin_password@localhost:27017/lms_course_structure?authSource=admin
-spring.data.mongodb.auto-index-creation=true
-
-# JWT configuration (from common-security module)
-auth.tokens.issuer=http://localhost:${server.port}
-auth.tokens.access.ttl=15m
-auth.tokens.refresh.ttl=14d
-auth.tokens.audience=lms-api
-auth.tokens.secret=mysuperlongsecretkey_for_dev_1234567890
-
-# Actuator endpoints
-management.endpoints.web.exposure.include=mappings,health,info
-
-# Logging
-logging.level.ru.lms_project.coursestructure=INFO
-logging.level.org.springframework.data.mongodb=INFO
+# Active Profile (????? ?????????????? ????? ?????????? ?????????)
+spring.profiles.active=${ACTIVE_PROFILE:dev}
