теперь точно исправил ошибки

--- a/services/course-structure-service/src/main/resources/application-dev.properties
+++ b/services/course-structure-service/src/main/resources/application-dev.properties
@@ -2,17 +2,17 @@
 spring.application.name=course-structure-service
 server.port=8087
 
-# ????????: ????????? ??????? ?????? MongoDB ??? ??????????????
+# ??????????: ????????? ?????????????? ???????? ???????? ??? ????????? ??????? ? ??????????????? MongoDB
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=lms_mongo_db
 spring.data.mongodb.username=lms_app_user
 spring.data.mongodb.password=lms_app_password
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.auto-index-creation=false
 
 # JWT configuration (from common-security module)
-auth.tokens.issuer=http://localhost:8087
+auth.tokens.issuer=http://localhost:8084
 auth.tokens.access.ttl=15m
 auth.tokens.refresh.ttl=14d
 auth.tokens.audience=lms-api
