--- a/services/course-structure-service/src/main/resources/application-test.properties
+++ b/services/course-structure-service/src/main/resources/application-test.properties
@@ -2,16 +2,17 @@
 spring.application.name=course-structure-service
 server.port=0
 
-# MongoDB Embedded for testing
-spring.mongodb.embedded.version=6.0.3
+# Embedded MongoDB configuration
+de.flapdoodle.mongodb.embedded.version=7.0.14
 spring.data.mongodb.database=test_db
+spring.data.mongodb.auto-index-creation=true
 
 # JWT configuration
-auth.tokens.issuer=http://localhost:8087
+auth.tokens.issuer=http://localhost:8084
 auth.tokens.access.ttl=15m
 auth.tokens.refresh.ttl=14d
 auth.tokens.audience=lms-api
-auth.tokens.secret=test-secret-key-for-testing-purposes-only
+auth.tokens.secret=test-secret-key-for-testing-purposes-only-with-enough-length-32bytes
 
 # Logging
 logging.level.ru.lms_project.coursestructure=DEBUG
