--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'lms'
 include 'services:courseService'
 include 'services:authservice'
 include 'services:userservice'
+include 'services:progressService'
 include 'services:common-security'
 
 include 'shared'
