--- a/services/progressService/src/main/resources/application.properties
+++ b/services/progressService/src/main/resources/application.properties
@@ -1,20 +1,3 @@
 spring.application.name=progressService
-server.port=8088
-
-# Используем dev профиль с H2 для быстрого запуска
-spring.profiles.active=dev
-
-# H2 база данных в памяти для локальной разработки
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# JPA/Hibernate настройки
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console (для отладки)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.profiles.active=local
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
