--- a/services/authservice/src/main/resources/application-dev.properties
+++ b/services/authservice/src/main/resources/application-dev.properties
@@ -17,16 +17,14 @@ management.endpoint.health.show-details=when_authorized
 management.endpoint.health.roles=ADMIN
 management.endpoints.web.base-path=/actuator
 
-
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
-auth.tokens.issuer=http://localhost:${server.port}
+auth.tokens.issuer=http://localhost:8084
 auth.tokens.access.ttl=15m
 auth.tokens.refresh.ttl=14d
 auth.tokens.audience=lms-api
 auth.tokens.secret=mysuperlongsecretkey_for_dev_1234567890
-
 
 auth.userservice.base-url=http://localhost:8082/api/v1/users
 
