--- a/services/courseService/build.gradle
+++ b/services/courseService/build.gradle
@@ -7,6 +7,8 @@ plugins {
 description = 'Course Service for the LMS project'
 
 dependencies {
+    implementation project(':services:common-security')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -19,4 +21,6 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
     testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
