--- a/build.gradle
+++ b/build.gradle
@@ -11,29 +11,24 @@ configure(subprojects) { project ->
     group = 'ru.lms-project'
     version = '0.0.1-SNAPSHOT'
 
-    java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
+    java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
+
+    repositories { mavenCentral() }
+
+    def isBootModule = !(project.name in ['services','shared'])
+    if (isBootModule) {
+        apply plugin: 'org.springframework.boot'
+        dependencies {
+            testImplementation 'org.springframework.boot:spring-boot-starter-test'
         }
     }
 
-    repositories {
-        mavenCentral()
-    }
-
-    if (project.name != 'services' && project.name != 'shared') {
-        apply plugin: 'org.springframework.boot'
-    }
-
     dependencies {
-        compileOnly 'org.projectlombok:lombok'
-        annotationProcessor 'org.projectlombok:lombok'
-        testCompileOnly 'org.projectlombok:lombok'
-        testAnnotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        compileOnly 'org.projectlombok:lombok:1.18.34'
+        annotationProcessor 'org.projectlombok:lombok:1.18.34'
+        testCompileOnly 'org.projectlombok:lombok:1.18.34'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
     }
 
-    tasks.withType(Test) {
-        useJUnitPlatform()
-    }
+    tasks.withType(Test) { useJUnitPlatform() }
 }
