--- a/services/courseService/src/main/resources/application-dev.properties
+++ b/services/courseService/src/main/resources/application-dev.properties
@@ -1,13 +1,15 @@
-# DEV PROFILE
-server.port=8081
+server.port=8085
 
-# MongoDB
 spring.data.mongodb.uri=mongodb://admin:admin_password@localhost:27017/lms_mongo_db?authSource=admin
+
+# JWT config (must match authservice!)
+auth.tokens.secret=mysuperlongsecretkey_for_dev_1234567890
+auth.tokens.issuer=http://localhost:8084
+auth.tokens.audience=lms-api
 
 logging.level.org.springframework.web=DEBUG
 logging.level.com.lms=DEBUG
 
-# Swagger
-springdoc.api-docs.path=/v1/api-docs
+# Swagger / Springdoc
 springdoc.api-docs.enabled=true
-springdoc.swagger-ui.url=/openapi.yaml
+springdoc.swagger-ui.enabled=true
