--- a/services/userservice/src/main/resources/application-dev.properties
+++ b/services/userservice/src/main/resources/application-dev.properties
@@ -1,9 +1,11 @@
-# server.port=8081
-# spring.datasource.url=jdbc:postgresql://localhost:5432/lms_db
-# spring.datasource.username=lms_user
-# spring.datasource.password=lms_password
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.profiles.active=dev
+server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/lms_db
+spring.datasource.username=lms_user
+spring.datasource.password=lms_password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jackson.time-zone=UTC
