--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ configure(subprojects) { project ->
         testCompileOnly 'org.projectlombok:lombok'
         testAnnotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testRuntimeOnly 'com.h2database:h2'
     }
 
     tasks.withType(Test) {
