--- a/services/authservice/src/test/resources/application-test.yml
+++ b/services/authservice/src/test/resources/application-test.yml
@@ -1,35 +1,61 @@
-server.port=8084
-  
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-  
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.open-in-view=false
-  
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jackson.time-zone=UTC
-  
-spring.sql.init.mode=never
-  
-management.endpoints.web.exposure.include=health, info
-management.endpoint.health.show-details=when_authorized
-management.endpoint.health.roles=ADMIN
-management.endpoints.web.base-path=/actuator
-  
-springdoc.api-docs.enabled=false
-springdoc.swagger-ui.enabled=false
-  
-auth.tokens.issuer=http://localhost:${server.port}
-auth.tokens.access.ttl=15m
-auth.tokens.refresh.ttl=14d
-auth.tokens.audience=lms-api
-auth.tokens.secret=test_secret_key_1234567890_test_secret_key
-  
-auth.userservice.base-url=http://localhost:8082/api/v1/users
-  
-logging.level.org.springframework.security=WARN
-logging.level.org.springframework.web=WARN
-logging.level.org.hibernate=WARN
+server:
+  port: 8084
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    open-in-view: false
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
+
+  jackson:
+    time-zone: UTC
+
+  sql:
+    init:
+      mode: never
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: when_authorized
+      roles: ADMIN
+
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    enabled: false
+
+auth:
+  tokens:
+    issuer: http://localhost:${server.port}
+    access:
+      ttl: 15m
+    refresh:
+      ttl: 14d
+    audience: lms-api
+    secret: test_secret_key_1234567890_test_secret_key
+  userservice:
+    base-url: http://localhost:8082/api/v1/users
+
+logging:
+  level:
+    org.springframework.security: WARN
+    org.springframework.web: WARN
+    org.hibernate: WARN
