--- a/services/userservice/build.gradle
+++ b/services/userservice/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.h2database:h2'
 }
 
 tasks.test {
